Add an all target

--- a/src/doors/clans-src/data/GNUmakefile
+++ b/src/doors/clans-src/data/GNUmakefile
@@ -3,6 +3,9 @@ PAKFILES :=	$(shell awk '{print $$1}' pak.lst)
 
 pak: clans.pak
 
+.PHONY: all
+all: pak
+
 .PHONY: native-devkit
 native-devkit:
 	env - PATH="$(PATH)" $(MAKE) -C ../src devkit
