Allow multiple inbound directories
Some systems are configured to put inbound files with a password
into separate directories than ones without. For those systems,
if the routing is configured as Direct (the default), it's likely
that some will be password-protected (ie: with an uplink) and others
won't be (ie: some rando across the planet).

In these cases, either some processing would be needed to move all
appropriate files somewhere for The Clans to process, or The Clans
needs to be able to support at least two different inbound directories.

Because I don't know how everyone has their FTN stuff configured,
I just make it so you can configure an unlimited number of inbounds
by just adding more lines to the config file. The config *utility*
does not yet support this, and only allows setting/editing the first
one.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -79,16 +79,17 @@ CLANS_OBJS :=	$(OBJDIR)alliance.o $(OBJDIR)clans.o $(OBJDIR)clansini.o \
 		$(OBJDIR)menus.o $(OBJDIR)menus2.o $(OBJDIR)misc.o \
 		$(OBJDIR)myibbs.o $(OBJDIR)myopen.o $(OBJDIR)news.o \
 		$(OBJDIR)npc.o $(OBJDIR)parsing.o $(OBJDIR)pawn.o \
-		$(OBJDIR)quests.o $(OBJDIR)reg.o $(OBJDIR)scores.o \
-		$(OBJDIR)serialize.o $(OBJDIR)spells.o $(OBJDIR)system.o \
-		$(OBJDIR)trades.o $(OBJDIR)unix_wrappers.o \
-		$(OBJDIR)user.o $(OBJDIR)video.o $(OBJDIR)village.o \
-		$(OBJDIR)voting.o $(OBJDIR)wb_fapnd.o
+		$(OBJDIR)quests.o $(OBJDIR)readcfg.o $(OBJDIR)reg.o \
+		$(OBJDIR)scores.o $(OBJDIR)serialize.o $(OBJDIR)spells.o \
+		$(OBJDIR)system.o $(OBJDIR)trades.o \
+		$(OBJDIR)unix_wrappers.o $(OBJDIR)user.o \
+		$(OBJDIR)video.o $(OBJDIR)village.o $(OBJDIR)voting.o \
+		$(OBJDIR)wb_fapnd.o
 
 CHEW_OBJS :=	$(OBJDIR)chew.o $(OBJDIR)gum.o $(OBJDIR)parsing.o
 
 CONFIG_OBJS :=	$(OBJDIR)config.o $(OBJDIR)parsing.o \
-		$(OBJDIR)unix_wrappers.o
+		$(OBJDIR)readcfg.o $(OBJDIR)unix_wrappers.o
 
 ECOMP_OBJS :=	$(OBJDIR)ecomp.o $(OBJDIR)parsing.o $(OBJDIR)serialize.o \
 		$(OBJDIR)crc.o
@@ -115,9 +116,9 @@ PCEDIT_OBJS :=	$(OBJDIR)pcedit.o $(OBJDIR)myopen.o \
 		$(OBJDIR)unix_wrappers.o $(OBJDIR)serialize.o \
 		$(OBJDIR)deserialize.o $(OBJDIR)crc.o
 
-RESET_OBJS :=	$(OBJDIR)reset.o $(OBJDIR)unix_wrappers.o \
-		$(OBJDIR)serialize.o $(OBJDIR)deserialize.o \
-		$(OBJDIR)crc.o $(OBJDIR)parsing.o $(OBJDIR)myopen.o
+RESET_OBJS :=	$(OBJDIR)reset.o $(OBJDIR)crc.o $(OBJDIR)deserialize.o \
+		$(OBJDIR)myopen.o $(OBJDIR)parsing.o $(OBJDIR)readcfg.o \
+		$(OBJDIR)serialize.o $(OBJDIR)unix_wrappers.o
 
 ifdef WIN
  CLANS_OBJS +=	$(OBJDIR)win_wrappers.o
