Order BBS options and add MUTE

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -155,24 +155,25 @@
 	OutbufDrainTimeout = 10
 
 	; Supported options (separated with |):
-	;       XTRN_MINIMIZED
-	;       AUTO_LOGON
 	;       ALLOW_SSH
 	;       ALLOW_SFTP
 	;       ALLOW_RLOGIN
+	;       AUTO_LOGON
 	;       DEBUG_TELNET
-	;       SSH_ANYAUTH
-	;       NO_QWK_EVENTS
-	;       NO_NEWDAY_EVENTS
-	;       NO_TELNET
-	;       NO_TELNET_GA
-	;       NO_EVENTS
-	;       NO_HOST_LOOKUP
-	;       NO_SPY_SOCKETS
-	;       NO_DOS
-	;       NO_RECYCLE
 	;       GET_IDENT
 	;       HAPROXY_PROTO
+	;       MUTE
+	;       NO_DOS
+	;       NO_EVENTS
+	;       NO_HOST_LOOKUP
+	;       NO_NEWDAY_EVENTS
+	;       NO_QWK_EVENTS
+	;       NO_TELNET
+	;       NO_TELNET_GA
+	;       NO_SPY_SOCKETS
+	;       NO_RECYCLE
+	;       SSH_ANYAUTH
+	;       XTRN_MINIMIZED
 	Options = XTRN_MINIMIZED | ALLOW_RLOGIN | ALLOW_SSH
 	ExternalTermANSI = pc3
 
