SlyEdit: New configuration option to use Ctrl-Q as the hotkey (if not, Ctrl-Y will be used as an alternative). Also, improvement to user input for choosing a graphic character to insert.

--- a/ctrl/SlyEdit.example.cfg
+++ b/ctrl/SlyEdit.example.cfg
@@ -50,6 +50,9 @@ allowEditQuoteLines=true
 ; Whether or not to allow spell check
 allowSpellCheck=true
 
+; Use Ctrl-Q to quote (if not, use Ctrl-Y)
+ctrlQQuote=true
+
 ; Dictionary filenames (used for spell check): This is a comma-separated list of
 ; dictionary filenames.  The dictionary filenames are in the format
 ; dictionary_<language>.txt, where <language> is the language name.  In this
