More make overhaul
This adds a top-level makefile that results in a runnable game, and
terrible mess if ran inside the repo.

Also supports running from outside the repo.

This also re-adds a target to build the installer, but since the
names of the binaries have the platform and flavour in them, they're
too long for the .GUM format. The format will need to be extended
to support them before that target works.

--- a/src/doors/clans-src/data/GNUmakefile
+++ b/src/doors/clans-src/data/GNUmakefile
@@ -1,4 +1,8 @@
-BINDIR	?=	../bin/
+SRC	?=	..
+override SRC := $(abspath $(SRC))/
+include $(SRC)/mk/Platform.gmake
+include $(SRC)/mk/Paths.gmake
+
 PAKFILES :=	$(shell awk '{print $$1}' pak.lst)
 
 pak: clans.pak
