Make build handle ODoors too
Add a new "build" default target, and add a target for the OpenDoors
library itself.

I'm not happy with having a deeply parented dependency in here
though... maybe symlinks will work in git?

--- a/src/doors/clans-src/GNUmakefile
+++ b/src/doors/clans-src/GNUmakefile
@@ -14,6 +14,9 @@ INSTALL_DATA ?=	$(INSTALL) -m 644
 include $(SRC)mk/Platform.gmake
 include $(SRC)mk/Paths.gmake
 
+.PHONY: build
+build:	data binaries devkit-binaries
+
 .PHONY: game
 game:	data binaries
 	cp $(DOOR_BINARIES) .
