Add (and use) a symlink to OpenDoors
This way a release tarball can be created that doesn't need deeply
nested directories to get to the stuff you actually want.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -1,11 +1,11 @@
 # External paths we need... default is "what's on Deuce's system"
-ODOORS ?= ../../../odoors/
-override ODOORS := $(abspath $(ODOORS))/
 SRC	?=	..
 
 include $(SRC)/mk/Platform.gmake
 include $(SRC)/mk/Paths.gmake
 
+ODOORS ?= $(SRC)odoors/
+override ODOORS := $(abspath $(ODOORS))/
 CFLAGS	+=	-I$(ODOORS)
 LDFLAGS	+=	"-L$(ODOORS)libs-$(OS)"
 ODOORS_LIB ?=	$(ODOORS)libs-$(OS)/libODoors.a
